--- a/PwaPo/package.json
+++ b/PwaPo/package.json
@@ -17,11 +17,12 @@
     "@angular/core": "^6.1.6",
     "@ionic-native/core": "^4.12.0",
     "@ionic-native/native-page-transitions": "^4.12.0",
-    "@ionic/core": "^4.0.0-beta.6",
+    "@ionic/core": "^4.0.0-beta.11",
     "@stencil/core": "0.12.3",
     "@stencil/router": "^0.2.5",
     "@stencil/sass": "^0.1.0",
     "@types/swiper": "^4.2.0",
+    "angular-svg-icon": "^6.0.0",
     "micromatch": "^3.1.10",
     "rxjs": "^6.3.0",
     "swiper": "^4.3.5",
